--- a/html/detail.html
+++ b/html/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>博客详情页</title>
+    <title>Blog Detail</title>
     <style type="text/css">
         body {
             margin: 0 20px;
@@ -40,17 +40,17 @@
     <script src="https://cdn.bootcss.com/moment.js/2.23.0/moment.min.js"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.23.0/locale/zh-cn.js"></script>
     <script>
-        // 发送 get 请求
+        // Send get request
         function get(url) {
             return $.get(url)
         }
 
-        // 显示格式化的时间
+        // Format time
         function getFormatDate(dt) {
             return moment(dt).format('LL')
         }
 
-        // 获取 url 参数
+        // get url parameters
         function getUrlParams() {
             let paramStr = location.href.split('?')[1] || ''
             paramStr = paramStr.split('#')[0]
@@ -64,21 +64,21 @@
             return result
         }
 
-        // 获取 dom 元素
+        // get DOM elements
         const $title = $('#title')
         const $infoContainer = $('#info-container')
         const $content = $('#content')
 
-        // 获取数据
+        // get data
         const urlParams = getUrlParams()
         const url = '/api/blog/detail?id=' + urlParams.id
         get(url).then(res => {
             if (res.errno !== 0) {
-                alert('数据错误')
+                alert('Error. Can not retrieve blog detail.')
                 return
             }
 
-            // 显示数据
+            // render data
             const data = res.data || {}
             $title.text(data.title)
             $content.text(data.content)
